package com.example.roomcall.model

enum class AppMode(val label: String) {
    SENDER("송신 모드"),
    RECEIVER("수신 모드")
}
